# integral-differential-nonsense

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  CODEOWNERS  LICENSE  Makefile  requirements-dev.txt
cli/: CMakeLists.txt  csv.cpp  csv.hpp  main.cpp
cmake/: SetupCompiler.cmake  SetupGoogleTest.cmake
common/: CMakeLists.txt
common/include/idn/common/: assert.hpp  macro.hpp
evaluator/: CMakeLists.txt  README.md
evaluator/include/idn/evaluator/: AST.hpp  ast_node_base.hpp  build_ast.hpp  capi.hpp  parser.hpp
evaluator/src/: AST.cpp  AST.hpp  build_ast.cpp  capi.cpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
evaluator/tests/: CMakeLists.txt  test_ast_expression.cpp  test_ast_node.cpp  test_lexer.cpp  test_parser.cpp
parser/: CMakeLists.txt  common.hpp  parser.cpp  parser.hpp
parser/include/parser/: AST.hpp
solver/: CMakeLists.txt
solver/include/idn/solver/: rk4.hpp
solver/src/: rk4.asm  rk4.cpp
src/: main.cpp
src/solver/: rk4.asm  rk4.cpp
vissuite/: __main__.py  config.py
